@@ -1,3 +1,10 @@
+2009-02-20  Don Porter  <dgp@users.sourceforge.net>
+
+	* generic/tclPathObj.c: Fixed mistaken logic in TclFSGetPathType()
+	* tests/fileName.test:  that assumed (not "absolute" => "relative").
+	This is a false assumption on Windows, where "volumerelative" is
+	another possibility.  [Bug 2571597].
+
 2009-02-17  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* win/tcl.m4, win/configure: Check if cl groks _WIN64 already to
